# Programacion-en-clase

./: Armonico.java  Comparacion.java  Condiciones.java  Condiciones2.java  Entrada.java  Extraproyecto.csv  FactorialFor.java  FibonacciCondicion.java  HolaMundo2.java  Metodo1.java  Metodo2.java  ProyectoFinal.java  ProyectoFinal2.java  README.md  Scratch.java  Separacion.java  Variables.java  sleep.bat
Quinto Semestre/Algoritmos/FaceDetect/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fr.sln  fr.vcxproj  fr.vcxproj.filters  main.cpp
Quinto Semestre/Algoritmos/FaceDetect/FaceDetection/: FaceDetector.cpp  FaceDetector.h  main.cpp
Quinto Semestre/Algoritmos/FaceDetect/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog
Quinto Semestre/Algoritmos/FaceDetect/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.write.1.tlog
Quinto Semestre/Algoritmos/FaceDetect/fr.dir/Debug/fr.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog
Quinto Semestre/Algoritmos/FaceDetect/fr.dir/Release/fr.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  fr.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Segundo semestre/: Equipo.java  Quiniela.java  Seedship.java  Sonido.java  Sorter.java
primer semestre/: AbreDatos.java  Argumento.java  (+106 more)
(+355 files in other folders)
